--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Contact{% endblock title %}
+{% block title %} Blogpost{% endblock title %}
 
 {% block body %}
 
