--- a/templates/blog/bloghome.html
+++ b/templates/blog/bloghome.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %} BlogHome {% endblock title %}
-
+{% block blogactive %} active {% endblock blogactive %}
 {% block body %}
 
  {% endblock %}
