--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %} Home{% endblock title %}
-
+{% block homeactive %} active {% endblock homeactive %}
 {% block body %}
 
  {% endblock %}
