--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %} BlogPost{% endblock title %}
-{% block blogactive active {% endblock blogactive %}
+{% block blogactive %} active {% endblock blogactive %}
 {% block body %}
 
 {% endblock %}
