--- a/templates/home/search.html
+++ b/templates/home/search.html
@@ -1,21 +1,22 @@
 {% extends 'base.html' %}
 
-{% block title %} BlogHome {% endblock title %}
-{% block blogactive %} active {% endblock blogactive %} 
+{% block title %} Search {% endblock title %}
+{% block blogactive %} active {% endblock blogactive %}
 {% block body %}
 <div class="container my-3">
-    <h2>Coding Articles by coder9a</h2>
+    <h2>Search Results: </h2>
     {% for post in allPosts %}
-    <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 my-4 position-relative">
+    <div
+        class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 my-4 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-primary">Article By {{post.author}}</strong>
             <h3 class="mb-0">{{post.title}}</h3>
             <div class="mb-1 text-muted">{{post.timestamp}}</div>
             <p class="card-text mb-auto">{{post.content | truncatechars:500}}</p>
             <div class="my-2">
-            	<a href="/blog/{{post.slug}}" role="button" class="btn btn-primary">Continue reading</a>
+                <a href="/blog/{{post.slug}}" role="button" class="btn btn-primary">Continue reading</a>
             </div>
         </div>
     </div>
     {% endfor %}
- {% endblock %}
+    {% endblock %}
