--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
       <form method="get" action="/search" class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" name="query" id="query" placeholder="Search"
           aria-label="Search">
-        <button class="btn btn-outline-success my-2 mr-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-primary my-2 mr-2 my-sm-0" type="submit">Search</button>
       </form>
       {% if user.is_authenticated %}
       <ul class="navbar-nav mr-2">
